--- a/index.html
+++ b/index.html
@@ -14,18 +14,23 @@
             <div class="field_rezult">
                     <div class="numb_rez">
                         <div class="block_element win_one">
-                            <span></span>
+                            <span class="rez"></span>
                         </div>
-                        <!-- <div class="block_element restart">
-                            <span id="resetButton">Reset</span>
-                        </div> -->
+                        <div class="avatar-one">
+                        </div>
+                        <div class="avatar-two">
+                           <!--  <img src="img/win.svg" alt=""> -->
+                        </div>
                         <div class="block_element win_two">
-                            <span></span>
+                            <span class="rez"></span>
                         </div>
                     </div>
                     <div class="name_plaeyer">
                         <p class="block_pl one_player">
                             Bot
+                        </p>
+                        <p class="block_pl one_player">
+                            <span id="restart"></span>
                         </p>
                         <p class="block_pl two_player">
                             player
